[package]
name = "nox-kms"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-signer-local = { version = "1.5", features = ["keystore"] }
anyhow = "1.0.100"
axum = "0.8.8"
axum-prometheus = "0.10.0"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
hex = "0.4.3"
k256 = { version = "0.13", features = ["arithmetic", "serde", "expose-field"] }
metrics-exporter-prometheus = "0.18.1"
rand_core = { version = "0.6", features = ["getrandom"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
