[package]
name = "nox-kms"
version = "0.5.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
alloy-contract = "1.8.2"
alloy-primitives = "1.5.7"
alloy-provider = "1.8.2"
alloy-signer = { version = "1.8.2", features = ["eip712"] }
alloy-signer-local = "1.8.2"
alloy-sol-types = "1.5.7"
anyhow = "1.0.102"
axum = "0.8.8"
axum-prometheus = "0.10.0"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
config-secret = "0.1.0"
k256 = { version = "0.13.4", features = ["arithmetic", "serde", "expose-field"] }
metrics-exporter-prometheus = "0.18.1"
rand_core = { version = "0.6", features = ["getrandom"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
